clusters/k8s-keiretsu/apps/home/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-tls
  namespace: home
  annotations:
    cert-manager.io/cluster-issuer: luke-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: homeassistant.lukehouge.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant
            port:
              number: 8123
  tls:
  - secretName: homeassistant-tls
    hosts:
    - homeassistant.lukehouge.com
